mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: catalystlab-shared
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: mlflow
  type: ClusterIP
